# multimarkov

./: Cargo.toml  README.md
examples/: main.rs
resources/: romans.txt
src/: builder.rs  lib.rs  main.rs
src/multimarkov/: builder.rs  mod.rs
