[package]
name = "multimarkov"
version = "0.3.2"
edition = "2021"
authors = ["joeclark-phd <joe@joeclark.net>"]
license = "MIT"
repository = "https://github.com/joeclark-phd/multimarkov"
description = """
This is a generic tool for training and using multi-order Markov chains for procedural generation applications
such as generating randomized but authentic-sounding names for characters and locations.
"""

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.7.3"